--- a/ClientApplication/Views/Cart/Add.cshtml
+++ b/ClientApplication/Views/Cart/Add.cshtml
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Hours" class="control-label"></label>
-                    <input asp-for="Hours" class="form-control" />
+                    <input asp-for="Hours" min="1" class="form-control" />
                 </div>
                 <div class='col-sm-12'>
                     <div class="form-group">
@@ -31,7 +31,9 @@
                 </div>
                 <script type="text/javascript">
                      $(function () {
-                         $('#datetimepicker1').datetimepicker();
+                         $('#datetimepicker1').datetimepicker({
+                             minDate: today
+                         });
                      });
                 </script>
                 <div class="form-group">
